--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -2,5 +2,5 @@
 <%= render '/shared/content_title', title: header %>
 
 <% @category.posts.each do |post| %>
-  <%= render 'posts/post', post: post %>
+  <%= render @category.posts  %>
 <% end %>
