--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,6 +1,3 @@
-
 <%= render 'shared/content_title', title: 'All Posts' %>
 
-<% @posts.each do |post| %>
-  <%= render 'post', post: post %>
-<% end %>
+  <%= render @posts %>
