--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,21 +10,20 @@
   <h5><%= @user.username %>'s Activity</h5>
 
   <ul class='nav nav-tabs'>
-    <li class='<%= 'active' if params[:tab].nil? %>' > 
+    <li class="<%= 'active' if params[:tab].nil? %>" > 
       <%= link_to "Posts (#{@user.posts.size})", user_path(@user) %>
     </li>
-    <li class ='<%= 'active' if params[:tab] == 'comments' %>' >
+    <li class ="<%= 'active' if params[:tab] == 'comments' %>" >
       <%= link_to "Comments (#{@user.comments.size})", user_path(@user, tab: 'comments') %>
     </li>
   </ul>
 
-
 <% if params[:tab].nil? %>
   <% @user.posts.each do |post| %>
-    <%= render 'posts/post', post: post %>
+    <%= render @user.posts %>
   <% end %>
 <% elsif params[:tab] == 'comments' %>
   <% @user.comments.each do |comment| %>
-   <%= render 'comments/comment', comment: comment, show_post: true %>
+   <%= render @user.comments, show_post: true %>
   <% end %>
 <% end %>
